@@ -1,26 +1,0 @@
-/*
- * Translatable strings file generated by Glade.
- * Add this file to your project's POTFILES.in.
- * DO NOT compile it as part of your application.
- */
-
-gchar *s = N_("window1");
-gchar *s = N_("Enable Keyboard Repeat");
-gchar *s = N_("Delay until repeat:");
-gchar *s = N_("Key repeat rate:");
-gchar *s = N_("Very long");
-gchar *s = N_("Long");
-gchar *s = N_("Medium");
-gchar *s = N_("Short");
-gchar *s = N_("Very fast");
-gchar *s = N_("Fast");
-gchar *s = N_("Medium");
-gchar *s = N_("Slow");
-gchar *s = N_("Enable Keyboard Click");
-gchar *s = N_("Click volume");
-gchar *s = N_("Keyboard");
-gchar *s = N_("Volume");
-gchar *s = N_("Pitch (Hz)");
-gchar *s = N_("Duration (ms)");
-gchar *s = N_("Test");
-gchar *s = N_("Bell");
