@@ -8,3 +8,4 @@ POTFILES
 cat-id-tbl.c
 *.pot
 stamp-cat-id
+missing
