@@ -2,16 +2,15 @@ archiver/archive.c
 archiver/config-archiver.c
 archiver/location.c
 capplets/background/applier.c
-capplets/background/background.desktop.in.in
 capplets/background/background-properties-capplet.c
 capplets/background/background-properties.glade
+capplets/background/background.desktop.in.in
 capplets/common/capplet-util.c
 capplets/default-applications/default-applications.desktop.in.in
 capplets/default-applications/interface.c
 capplets/default-applications/support.c
 capplets/desktop-links/Advanced.directory.in.in
-capplets/desktop-links/gnome-hint-properties.desktop.in
-capplets/desktop-links/panel.desktop.in.in
+capplets/desktop-links/Sawfish/Sawfish.directory.in.in
 capplets/desktop-links/Sawfish/appearance-properties.desktop.in
 capplets/desktop-links/Sawfish/bindings-properties.desktop.in
 capplets/desktop-links/Sawfish/focus-properties.desktop.in
@@ -21,46 +20,53 @@ capplets/desktop-links/Sawfish/meta-properties.desktop.in
 capplets/desktop-links/Sawfish/misc-properties.desktop.in
 capplets/desktop-links/Sawfish/move-properties.desktop.in
 capplets/desktop-links/Sawfish/placement-properties.desktop.in
-capplets/desktop-links/Sawfish/Sawfish.directory.in.in
 capplets/desktop-links/Sawfish/sound-properties.desktop.in
 capplets/desktop-links/Sawfish/workspace-properties.desktop.in
+capplets/desktop-links/cd.desktop.in.in
+capplets/desktop-links/gnome-hint-properties.desktop.in
+capplets/desktop-links/legacy-applications.desktop.in.in
+capplets/desktop-links/panel.desktop.in.in
 capplets/desktop-links/screensaver.desktop.in.in
 capplets/desktop-links/session.desktop.in.in
-capplets/file-types/file-types-capplet.c
 capplets/file-types/file-types-capplet-dialogs.c
-capplets/file-types/file-types.desktop.in.in
+capplets/file-types/file-types-capplet.c
+capplets/file-types/file-types-capplet.desktop.in
 capplets/file-types/file-types-icon-entry.c
-capplets/keyboard/keyboard.desktop.in.in
+capplets/file-types/file-types.desktop.in.in
 capplets/keyboard/keyboard-properties.glade
+capplets/keyboard/keyboard.desktop.in.in
 capplets/mime-type/edit-window.c
 capplets/mime-type/mime-data.c
 capplets/mime-type/mime-info.c
 capplets/mime-type/mime-type-capplet.c
 capplets/mime-type/mime-type.desktop.in.in
 capplets/mime-type/new-mime-window.c
-capplets/mouse/mouse.desktop.in.in
 capplets/mouse/mouse-properties.glade
-capplets/sound/sound.desktop.in.in
+capplets/mouse/mouse.desktop.in.in
+capplets/sound/prefs-widget.c
 capplets/sound/sound-properties-capplet.c
 capplets/sound/sound-properties.glade
+capplets/sound/sound.desktop.in.in
 capplets/theme-switcher/demo.c
 capplets/theme-switcher/gtk-theme-selector.desktop.in.in
 capplets/theme-switcher/gui.c
 capplets/theme-switcher/install.c
-capplets/ui-properties/behavior.desktop.in.in
 capplets/ui-properties/behavior-properties.glade
-capplets/url-properties/url.desktop.in.in
+capplets/ui-properties/behavior.desktop.in.in
 capplets/url-properties/url-properties.c
+capplets/url-properties/url-properties.desktop.in
+capplets/url-properties/url.desktop.in.in
 capplets/wm-properties/wm-desktops/Enlightenment.desktop.in.in
 capplets/wm-properties/wm-desktops/IceWM.desktop.in.in
 capplets/wm-properties/wm-desktops/Scwm.desktop.in.in
-capplets/wm-properties/wm-desktops/twm.desktop.in.in
 capplets/wm-properties/wm-desktops/WindowMaker.desktop.in.in
+capplets/wm-properties/wm-desktops/twm.desktop.in.in
 capplets/wm-properties/wm-properties-capplet.c
-control-center/capplet-dir.c
-control-center/capplet-dir-view.c
+capplets/wm-properties/wm.desktop.in.in
+control-center/Gnome.directory.in.in
 control-center/capplet-dir-view-html.c
+control-center/capplet-dir-view.c
+control-center/capplet-dir.c
 control-center/gnomecc.desktop.in
 control-center/gnomecc.glade
-control-center/Gnome.directory.in.in
 control-center/main.c
