@@ -146,3 +146,4 @@ control-center/main.c
 root-manager/root-manager-helper.c
 root-manager/root-manager-wrap.c
 root-manager/root-manager.c
+archiver/main.c
