@@ -1,3 +1,8 @@
+2003-05-11  Abel Cheung  <maddog@linux.org.hk>
+
+	* keyboard-properties.glade.h: This is a generated file, can
+	  be removed.
+
 2001-09-29  Richard Hestilow  <hestilow@ximian.com>
 
 	* prefs-widget.c (prefs_widget_set_arg): Register
