@@ -1,3 +1,7 @@
+2003-05-11  Abel Cheung  <maddog@linux.org.hk>
+
+	* POTFILES.in, POTFILES.skip: Added various files.
+
 2002-05-30  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
