@@ -1,3 +1,8 @@
+2003-05-11  Abel Cheung  <maddog@linux.org.hk>
+
+	* keyboard-properties.glade.h: This is a generated file, can
+	  be removed.
+
 2002-02-14  Richard Hestilow  <hestilow@ximian.com>
 
 	* keyboard-properties.c: Change configuration
